--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,9 @@
 RewriteEngine On
 
-# A menos que la solicitud sea para un archivo o directorio existente,
-# envía la solicitud a index.php
+# Excluir la carpeta cronjobs de las reglas de reescritura
+RewriteRule ^cronjobs/ - [L]
+
+# El resto de tus reglas de reescritura
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^(.*)$ public/index.php [QSA,L]
